fixed error messages on all the forms to look the same

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -118,7 +118,17 @@ body {
   max-width: 300px !important;
 }
 
+.maxWidthBoxBig{
+  max-width: 500px !important;
+}
 
+.maxHeightBox{
+  max-height: 300px !important;
+}
+
+.maxHeightBoxBig{
+  max-height: 600px !important;
+}
 
 /* profile */
 
