made button for changing profile picture

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,6 +1,7 @@
 
 
 {% extends "base.html" %}
+{% load static%}
 {% block content %}
 
     <br>
@@ -11,12 +12,18 @@
 
     <br>
 
-    {% if details.profile_pic.url %}
-    <div class='d-flex justify-content-center align-content-center'>
-        <img src="{{ details.profile_pic.url }}" alt="Profile Picture" class='img-fluid rounded-circle w-25 h-25'>
+    <div class='container text-center'>
+        {% if details.profile_pic.url %}
+            <div class='rounded-circle-container'>
+                <img src="{{ details.profile_pic.url }}" alt="Profile Picture">
+            </div>
+        {% else %}
+            <div class='rounded-circle-container'>
+                <img src="{% static 'images/default_no_profile_pic.jpg' %}" alt="Default Profile">
+            </div>
+        {% endif %}
     </div>
-    {% endif %}
-    
+
     <br>
     <br>
     <br>
