--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -129,8 +129,44 @@ body {
 .maxHeightBoxBig{
   max-height: 600px !important;
 }
+/* end settings  */
 
 /* profile */
+.rounded-circle-container {
+  width: 200px; 
+  height: 200px; /* Same as width to get a perfect circle */
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.rounded-circle-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.rounded-circle-container2{
+  width: 200px; 
+  height: 200px; /* Same as width to get a perfect circle */
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.rounded-circle-container2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.rounded-circle-container2 img:hover{
+  border: solid;
+  border-color: black;
+  border-width: 50px;  
+  transition: border-width 1s ease-in-out;}
 
 .left_element{
   max-width: 400px !important;
