--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block content %}
 
-<div class='container text-center'>
+<br>
+
+<div class='container text-center marginMiddle photoMaxWidth'>
     <a a class="linkStripper" href="{% url 'home' %}">
         {% if details.profile_pic.url %}
             <div class='rounded-circle-container2'>
