--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,6 +57,7 @@
             <div class="row">
                 <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block background-brown sidebar">
                     <!-- Sidebar content goes here -->
+                    {% comment %} tab panels or list groups {% endcomment %}
                 </nav>
                 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                     {% block content %}{% endblock %}
