--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,8 @@
     <link rel='stylesheet' href='{% static 'styles.css' %}'>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/favicon.ico' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -86,6 +88,6 @@
                 </div>
             </div>
         </footer>
-
+        <script src="{% static 'main.js' %}"></script>
     </body>
 </html>
