upgraded to delete accounts as well

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -16,8 +16,10 @@
                 <label for="itemType" class="form-label">Select Item Type:</label>
                 <select class="form-select" id="itemType" name="type" required>
                     <option value="user">User</option>
+                    <option value="account">Account</option>
                     <option value="message">Message</option>
                     <option value="bug_report">Bug Report</option>
+                    
                 </select>
             </div>
         
