--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -15,7 +15,7 @@
     <div class='container text-center'>
         {% if profile_pic %}
             <div class='rounded-circle-container'>
-                <img src="{{ profile_pic.url|safe }}" alt="Profile Picture">
+                <img src="{{ profile_pic.url }}" alt="Profile Picture">
             </div>
         {% else %}
             <div class='rounded-circle-container'>
