I didnt do anything I just dont want to merge

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -142,7 +142,7 @@ body {
 
 /* home */
 .homeBackground{
-  background-image: url("images/bcca_group_photo.jpg") !important;
+  background-image: url("images/bcca_group_photo_enhance.png") !important;
 }
 
 /* footer stuff */
